config/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow tcp 47000:49000 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp -m multiport --dports 47000:49000 -j ACCEPT

### tuple ### allow udp 47000:49000 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp -m multiport --dports 47000:49000 -j ACCEPT

### tuple ### allow tcp 1714:1764 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp -m multiport --dports 1714:1764 -j ACCEPT

### tuple ### allow udp 1714:1764 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp -m multiport --dports 1714:1764 -j ACCEPT

### tuple ### allow tcp 50000:50005 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp -m multiport --dports 50000:50005 -j ACCEPT

### tuple ### allow udp 50000:50005 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp -m multiport --dports 50000:50005 -j ACCEPT

### tuple ### allow any 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 80 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -j ACCEPT

### tuple ### allow any 8080 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 8080 -j ACCEPT
-A ufw-user-input -p udp --dport 8080 -j ACCEPT

### tuple ### allow any 443 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 443 -j ACCEPT
-A ufw-user-input -p udp --dport 443 -j ACCEPT

### tuple ### allow any 8443 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 8443 -j ACCEPT
-A ufw-user-input -p udp --dport 8443 -j ACCEPT

### tuple ### allow any 53 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 53 -j ACCEPT
-A ufw-user-input -p udp --dport 53 -j ACCEPT

### tuple ### allow any 67 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 67 -j ACCEPT
-A ufw-user-input -p udp --dport 67 -j ACCEPT

### tuple ### allow any 123 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 123 -j ACCEPT
-A ufw-user-input -p udp --dport 123 -j ACCEPT

### tuple ### allow any 58722 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 58722 -j ACCEPT
-A ufw-user-input -p udp --dport 58722 -j ACCEPT

### tuple ### allow any 3306 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 3306 -j ACCEPT
-A ufw-user-input -p udp --dport 3306 -j ACCEPT

### tuple ### allow any 9663 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 9663 -j ACCEPT
-A ufw-user-input -p udp --dport 9663 -j ACCEPT

### tuple ### allow udp 27000:27100 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp -m multiport --dports 27000:27100 -j ACCEPT

### tuple ### allow tcp 27000:27100 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp -m multiport --dports 27000:27100 -j ACCEPT

### tuple ### allow udp 3470:4400 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp -m multiport --dports 3470:4400 -j ACCEPT

### tuple ### allow any 21027 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 21027 -j ACCEPT
-A ufw-user-input -p udp --dport 21027 -j ACCEPT

### tuple ### allow any 22000 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 22000 -j ACCEPT
-A ufw-user-input -p udp --dport 22000 -j ACCEPT

### tuple ### allow any 37622 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 37622 -j ACCEPT
-A ufw-user-input -p udp --dport 37622 -j ACCEPT

### tuple ### allow any 51413 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 51413 -j ACCEPT
-A ufw-user-input -p udp --dport 51413 -j ACCEPT

### tuple ### allow tcp 47984:48010 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp -m multiport --dports 47984:48010 -j ACCEPT

### tuple ### allow udp 47984:48010 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp -m multiport --dports 47984:48010 -j ACCEPT

### tuple ### allow udp 5353 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 5353 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
