config/ufw/user6.rules
*filter
:ufw6-user-input - [0:0]
:ufw6-user-output - [0:0]
:ufw6-user-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-user-logging-input - [0:0]
:ufw6-user-logging-output - [0:0]
:ufw6-user-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-logging-deny - [0:0]
:ufw6-logging-allow - [0:0]
:ufw6-user-limit - [0:0]
:ufw6-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow tcp 47000:49000 ::/0 any ::/0 in
-A ufw6-user-input -p tcp -m multiport --dports 47000:49000 -j ACCEPT

### tuple ### allow tcp 47000:49000 ::/0 any ::/0 out
-A ufw6-user-output -p tcp -m multiport --dports 47000:49000 -j ACCEPT

### tuple ### allow udp 47000:49000 ::/0 any ::/0 in
-A ufw6-user-input -p udp -m multiport --dports 47000:49000 -j ACCEPT

### tuple ### allow udp 47000:49000 ::/0 any ::/0 out
-A ufw6-user-output -p udp -m multiport --dports 47000:49000 -j ACCEPT

### tuple ### allow tcp 1714:1764 ::/0 any ::/0 in
-A ufw6-user-input -p tcp -m multiport --dports 1714:1764 -j ACCEPT

### tuple ### allow tcp 1714:1764 ::/0 any ::/0 out
-A ufw6-user-output -p tcp -m multiport --dports 1714:1764 -j ACCEPT

### tuple ### allow udp 1714:1764 ::/0 any ::/0 in
-A ufw6-user-input -p udp -m multiport --dports 1714:1764 -j ACCEPT

### tuple ### allow udp 1714:1764 ::/0 any ::/0 out
-A ufw6-user-output -p udp -m multiport --dports 1714:1764 -j ACCEPT

### tuple ### allow tcp 50000:50005 ::/0 any ::/0 in
-A ufw6-user-input -p tcp -m multiport --dports 50000:50005 -j ACCEPT

### tuple ### allow tcp 50000:50005 ::/0 any ::/0 out
-A ufw6-user-output -p tcp -m multiport --dports 50000:50005 -j ACCEPT

### tuple ### allow udp 50000:50005 ::/0 any ::/0 in
-A ufw6-user-input -p udp -m multiport --dports 50000:50005 -j ACCEPT

### tuple ### allow udp 50000:50005 ::/0 any ::/0 out
-A ufw6-user-output -p udp -m multiport --dports 50000:50005 -j ACCEPT

### tuple ### allow any 80 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 80 -j ACCEPT
-A ufw6-user-input -p udp --dport 80 -j ACCEPT

### tuple ### allow any 80 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 80 -j ACCEPT
-A ufw6-user-output -p udp --dport 80 -j ACCEPT

### tuple ### allow any 8080 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 8080 -j ACCEPT
-A ufw6-user-input -p udp --dport 8080 -j ACCEPT

### tuple ### allow any 8080 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 8080 -j ACCEPT
-A ufw6-user-output -p udp --dport 8080 -j ACCEPT

### tuple ### allow any 443 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 443 -j ACCEPT
-A ufw6-user-input -p udp --dport 443 -j ACCEPT

### tuple ### allow any 443 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 443 -j ACCEPT
-A ufw6-user-output -p udp --dport 443 -j ACCEPT

### tuple ### allow any 8443 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 8443 -j ACCEPT
-A ufw6-user-input -p udp --dport 8443 -j ACCEPT

### tuple ### allow any 8443 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 8443 -j ACCEPT
-A ufw6-user-output -p udp --dport 8443 -j ACCEPT

### tuple ### allow any 53 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 53 -j ACCEPT
-A ufw6-user-input -p udp --dport 53 -j ACCEPT

### tuple ### allow any 53 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 53 -j ACCEPT
-A ufw6-user-output -p udp --dport 53 -j ACCEPT

### tuple ### allow any 67 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 67 -j ACCEPT
-A ufw6-user-input -p udp --dport 67 -j ACCEPT

### tuple ### allow any 67 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 67 -j ACCEPT
-A ufw6-user-output -p udp --dport 67 -j ACCEPT

### tuple ### allow any 123 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 123 -j ACCEPT
-A ufw6-user-input -p udp --dport 123 -j ACCEPT

### tuple ### allow any 123 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 123 -j ACCEPT
-A ufw6-user-output -p udp --dport 123 -j ACCEPT

### tuple ### allow any 58722 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 58722 -j ACCEPT
-A ufw6-user-input -p udp --dport 58722 -j ACCEPT

### tuple ### allow any 58722 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 58722 -j ACCEPT
-A ufw6-user-output -p udp --dport 58722 -j ACCEPT

### tuple ### allow any 3306 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 3306 -j ACCEPT
-A ufw6-user-input -p udp --dport 3306 -j ACCEPT

### tuple ### allow any 3306 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 3306 -j ACCEPT
-A ufw6-user-output -p udp --dport 3306 -j ACCEPT

### tuple ### allow any 9663 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 9663 -j ACCEPT
-A ufw6-user-input -p udp --dport 9663 -j ACCEPT

### tuple ### allow any 9663 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 9663 -j ACCEPT
-A ufw6-user-output -p udp --dport 9663 -j ACCEPT

### tuple ### allow udp 27000:27100 ::/0 any ::/0 in
-A ufw6-user-input -p udp -m multiport --dports 27000:27100 -j ACCEPT

### tuple ### allow udp 27000:27100 ::/0 any ::/0 out
-A ufw6-user-output -p udp -m multiport --dports 27000:27100 -j ACCEPT

### tuple ### allow tcp 27000:27100 ::/0 any ::/0 in
-A ufw6-user-input -p tcp -m multiport --dports 27000:27100 -j ACCEPT

### tuple ### allow tcp 27000:27100 ::/0 any ::/0 out
-A ufw6-user-output -p tcp -m multiport --dports 27000:27100 -j ACCEPT

### tuple ### allow udp 3470:4400 ::/0 any ::/0 in
-A ufw6-user-input -p udp -m multiport --dports 3470:4400 -j ACCEPT

### tuple ### allow udp 3470:4400 ::/0 any ::/0 out
-A ufw6-user-output -p udp -m multiport --dports 3470:4400 -j ACCEPT

### tuple ### allow any 21027 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 21027 -j ACCEPT
-A ufw6-user-input -p udp --dport 21027 -j ACCEPT

### tuple ### allow any 22000 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 22000 -j ACCEPT
-A ufw6-user-input -p udp --dport 22000 -j ACCEPT

### tuple ### allow udp 33434:33524 ::/0 any ::/0 out
-A ufw6-user-output -p udp -m multiport --dports 33434:33524 -j ACCEPT

### tuple ### allow any 37622 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 37622 -j ACCEPT
-A ufw6-user-input -p udp --dport 37622 -j ACCEPT

### tuple ### allow any 37622 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 37622 -j ACCEPT
-A ufw6-user-output -p udp --dport 37622 -j ACCEPT

### tuple ### allow any 51413 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 51413 -j ACCEPT
-A ufw6-user-input -p udp --dport 51413 -j ACCEPT

### tuple ### allow any 51413 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 51413 -j ACCEPT
-A ufw6-user-output -p udp --dport 51413 -j ACCEPT

### tuple ### allow tcp 47984:48010 ::/0 any ::/0 in
-A ufw6-user-input -p tcp -m multiport --dports 47984:48010 -j ACCEPT

### tuple ### allow tcp 47984:48010 ::/0 any ::/0 out
-A ufw6-user-output -p tcp -m multiport --dports 47984:48010 -j ACCEPT

### tuple ### allow udp 47984:48010 ::/0 any ::/0 in
-A ufw6-user-input -p udp -m multiport --dports 47984:48010 -j ACCEPT

### tuple ### allow udp 47984:48010 ::/0 any ::/0 out
-A ufw6-user-output -p udp -m multiport --dports 47984:48010 -j ACCEPT

### tuple ### allow udp 5353 ::/0 any ::/0 in
-A ufw6-user-input -p udp --dport 5353 -j ACCEPT

### tuple ### allow any any ::/0 any ::/0 out_virbr0
-A ufw6-user-output -o virbr0 -j ACCEPT

### tuple ### allow any 22 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 22 -j ACCEPT
-A ufw6-user-output -p udp --dport 22 -j ACCEPT

### tuple ### allow any 22 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 22 -j ACCEPT
-A ufw6-user-input -p udp --dport 22 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw6-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-after-logging-output -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw6-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw6-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw6-user-limit -j REJECT
-A ufw6-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
